@@ -3,9 +3,9 @@ package gift.option;
 import gift.product.Product;
 import gift.product.ProductRepository;
 import jakarta.validation.Valid;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -15,18 +15,19 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.NoSuchElementException;
 
 /*
- * Each product must have at least one option at all times.
- * Option names are validated against allowed characters and length constraints.
+ * 각 상품은 항상 하나 이상의 옵션을 가져야 한다.
+ * 옵션 이름은 허용된 문자 및 길이 제약에 따라 검증된다.
  */
 @RestController
-@RequestMapping(path = "/api/products/{productId}/options")
+@RequestMapping("/api/products/{productId}/options")
 public class OptionController {
     private final OptionRepository optionRepository;
     private final ProductRepository productRepository;
 
+    @Autowired
     public OptionController(OptionRepository optionRepository, ProductRepository productRepository) {
         this.optionRepository = optionRepository;
         this.productRepository = productRepository;
@@ -34,13 +35,11 @@ public class OptionController {
 
     @GetMapping
     public ResponseEntity<List<OptionResponse>> getOptions(@PathVariable Long productId) {
-        Product product = productRepository.findById(productId).orElse(null);
-        if (product == null) {
-            return ResponseEntity.notFound().build();
-        }
+        productRepository.findById(productId)
+            .orElseThrow(() -> new NoSuchElementException("상품을 찾을 수 없습니다. id=" + productId));
         List<OptionResponse> options = optionRepository.findByProductId(productId).stream()
             .map(OptionResponse::from)
-            .collect(Collectors.toList());
+            .toList();
         return ResponseEntity.ok(options);
     }
 
@@ -51,39 +50,37 @@ public class OptionController {
     ) {
         validateName(request.name());
 
-        Product product = productRepository.findById(productId).orElse(null);
-        if (product == null) {
-            return ResponseEntity.notFound().build();
-        }
+        Product product = productRepository.findById(productId)
+            .orElseThrow(() -> new NoSuchElementException("상품을 찾을 수 없습니다. id=" + productId));
 
         if (optionRepository.existsByProductIdAndName(productId, request.name())) {
             throw new IllegalArgumentException("이미 존재하는 옵션명입니다.");
         }
 
-        Option saved = optionRepository.save(new Option(product, request.name(), request.quantity()));
+        Option saved = optionRepository.save(request.toEntity(product));
         URI location = URI.create("/api/products/" + productId + "/options/" + saved.getId());
         return ResponseEntity.created(location)
             .body(OptionResponse.from(saved));
     }
 
-    @DeleteMapping(path = "/{optionId}")
+    @DeleteMapping("/{optionId}")
     public ResponseEntity<Void> deleteOption(
         @PathVariable Long productId,
         @PathVariable Long optionId
     ) {
-        Product product = productRepository.findById(productId).orElse(null);
-        if (product == null) {
-            return ResponseEntity.notFound().build();
-        }
+        productRepository.findById(productId)
+            .orElseThrow(() -> new NoSuchElementException("상품을 찾을 수 없습니다. id=" + productId));
 
         List<Option> options = optionRepository.findByProductId(productId);
         if (options.size() <= 1) {
             throw new IllegalArgumentException("옵션이 1개인 상품은 옵션을 삭제할 수 없습니다.");
         }
 
-        Option option = optionRepository.findById(optionId).orElse(null);
-        if (option == null || !option.getProduct().getId().equals(productId)) {
-            return ResponseEntity.notFound().build();
+        Option option = optionRepository.findById(optionId)
+            .orElseThrow(() -> new NoSuchElementException("옵션을 찾을 수 없습니다. id=" + optionId));
+
+        if (!option.getProduct().getId().equals(productId)) {
+            throw new NoSuchElementException("해당 상품의 옵션이 아닙니다. optionId=" + optionId);
         }
 
         optionRepository.delete(option);
@@ -95,10 +92,5 @@ public class OptionController {
         if (!errors.isEmpty()) {
             throw new IllegalArgumentException(String.join(", ", errors));
         }
-    }
-
-    @ExceptionHandler(IllegalArgumentException.class)
-    public ResponseEntity<String> handleIllegalArgument(IllegalArgumentException e) {
-        return ResponseEntity.badRequest().body(e.getMessage());
     }
 }
